# GrasslandsDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.zed/: debug.json  tasks.json
resources/meshes/: bid_billboard.mtl  demo_material_sphere.mtl  grass_blade.mtl  grass_patch.mtl  grass_plane.mtl  grid.mtl  platform.mtl  rocks.mtl  tree.mtl  tree2.mtl
resources/shaders/: fullscreen_quad.frag  fullscreen_quad.vert  grass_instanced.comp  grass_instanced.frag  grass_instanced.vert  lighting_calculations.glsl  material_data.glsl  matrix_math.glsl  mesh_lit.frag  mesh_lit.vert  opaque_instanced_lit.frag  opaque_instanced_lit.vert  opaque_lit.frag  opaque_lit.vert  postpass.frag  postpass.vert  shader_utils.glsl  shadow_instanced_pass.vert  shadow_pass.vert  skybox.frag  skybox.vert  terrain.frag  terrain.tesc  terrain.tese  terrain.vert  transformation_data.glsl
src/: application.hpp  global.hpp  globals.hpp  main.cpp
src/core/: clock.cpp  clock.hpp  io.cpp  io.hpp  logger.cpp  logger.hpp  window.cpp  window.hpp
src/debug/: debug_layer.cpp  debug_layer.hpp
src/gameplay/: scene.cpp  scene.hpp
src/gameplay/components/: foliage_component.hpp  instanced_mesh_component.hpp  mesh_component.hpp  terrain_component.hpp  terrain_mesh_component.hpp  transform_component.hpp
src/gameplay/gameobjects/: terrain.hpp
src/gameplay/structures/: environment.hpp  settings.hpp
src/gameplay/systems/: camera_system.cpp  camera_system.hpp  foliage_system.cpp  foliage_system.hpp  instanced_mesh_system.cpp  instanced_mesh_system.hpp  system.hpp  terrain_system.cpp  terrain_system.hpp
src/gameplay/world/: environment.hpp  terrain.cpp  terrain.hpp
src/graphics/: renderer.cpp  renderer.hpp
src/graphics/objects/: material.hpp  multimesh.hpp  shader.hpp
src/graphics/structures/: Instancedmesh.hpp  batchmesh.hpp  boundingBox.hpp  camera.hpp  cubemap.cpp  cubemap.hpp  framebuffer.hpp  frustrum.hpp  instanced_mesh.hpp  material.hpp  mesh.hpp  multimesh.hpp  plane.hpp  renderbuffer.hpp  shader.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp  transform.hpp
src/graphics/utils/: parser.cpp  parser.hpp
